--- a/src/styles/components/_subject.scss
+++ b/src/styles/components/_subject.scss
@@ -3,7 +3,7 @@
     align-items: center;
     gap: clamp(var(--space-200), 0.0458rem + 4.0712vw, var(--space-400));
     padding: clamp(var(--space-200), 0.4286rem + 1.1905vw, var(--space-200));
-    border: transparent;
+    border: 3px solid transparent;
     border-radius: 24px;
     outline-color: var(--clr-purple-600);
     width: 100%;
@@ -14,6 +14,6 @@
     }
 
     &:hover {
-        border: 3px solid var(--clr-purple-600);
+        border-color: var(--clr-purple-600);
     }
 }
